# westerstrom-utils

./: .clang-format  CMakeLists.txt  LICENSE
.clion-build-debug/: westerstrom_utils.cbp
.clion-build-debug/test/: westerstrom_utils_test.cbp
include/westerstrom/: grid.h  pow_int.h  set_cross.h  tuple_math.h
src/: library.h
test/: CMakeLists.txt  grid.cpp  pow_int.cpp  set_cross.cpp  test.cpp  tuple_math.cpp
